# neo4j-and-azure-lab

./: .env.sample  .gitignore  CLAUDE.md  CONFIG.txt.example  GUIDE_DEV_CONTAINERS.md  README.md  SLIDES.md  TEMPLATE.md  pyproject.toml
.devcontainer/: devcontainer.json
Lab_10_Retrievers/: 01_text2cypher_retriever.ipynb  02_entity_extraction.ipynb  03_full_dataset.ipynb  README.md
Lab_11_Hybrid_Search/: 01_fulltext_search.ipynb  02_hybrid_search.ipynb  README.md
Lab_3_Foundry_Agents/: README.md
Lab_4_Start_Codespace/: README.md
Lab_5_Foundry_Agents/: 01_simple_agent.ipynb  02_context_provider.ipynb  README.md
Lab_6_Context_Providers/: 01_vector_context_provider.ipynb  02_graph_enriched_provider.ipynb  03_fulltext_context_provider.ipynb  README.md
Lab_7_Agent_Memory/: 01_memory_context_provider.ipynb  02_memory_tools_agent.ipynb  README.md
Lab_8_Knowledge_Graph/: 02_graphrag_retrievers.ipynb  README.md  data_utils.py
Lab_9_Advanced_Agents/: 02_vector_graph_agent.ipynb  03_text2cypher_agent.ipynb  README.md
financial_data_load/: .env.sample  ISSUES.md  README.md  main.py
financial_data_load/infra/: main.bicep
financial_data_load/scripts/: check_status.sh  cleanup_azure.sh
financial_data_load/solution_srcs/: 01_04_full_dataset_queries.py  03_02_vector_graph_agent.py  03_03_text2cypher_agent.py  04_01_fulltext_context_provider.py  04_02_vector_context_provider.py  04_03_graph_enriched_provider.py  (+11 more)
infra/: main.bicep  main.parameters.json
scripts/: start_dev_container.sh  start_dev_container_post_create.sh
shared/: azure_embedder.py  config.py
(+6 files in other folders)
